<resources>
    <string name="app_name">SimpleTodoApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_a_new_item_label">Add a new item</string>
    <string name="add_button">add</string>
    <string name="app_name_label">Codepath Todo App</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="tvEditItemLabel">Codepath Edit Todo</string>
    <string name="editItemLabel">Edit the item</string>
    <string name="etEditItem">etEditItem</string>
    <string name="btnSaveItem">Save</string>
    <string name="onClickSaveItem">updateItem</string>
    <string name="description_label">description</string>
    <string name="priority_label">priority</string>
    <string name="due_date_label">due_date</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="tvAddItemLabel">addItem</string>
    <string name="add_item_button">add</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="title_activity_date">DateActivity</string>
    <string name="title_activity_time">TimeActivity</string>
</resources>
