<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_label" />

    <TextView
        android:id="@+id/tvItemPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date_label"
        android:id="@+id/tvItemDueDate" />

</LinearLayout>